terraform/SecGrp.tf
resource "aws_security_group" "FullStackSG" {
  name        = "FullStackSG"
  description = "FULLSTACK PROJECT SECURITY GROUP"

  tags = {
    Name = "FullStackSG"
  }
}

resource "aws_vpc_security_group_ingress_rule" "SshWithMyIP" {
  security_group_id = aws_security_group.FullStackSG.id
  cidr_ipv4         = "92.92.126.170/32"
  from_port         = 22
  ip_protocol       = "tcp"
  to_port           = 22
}

resource "aws_vpc_security_group_ingress_rule" "allow_http" {
  security_group_id = aws_security_group.FullStackSG.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  to_port           = 80
}

resource "aws_vpc_security_group_egress_rule" "allow_all_traffic_ipv4" {
  security_group_id = aws_security_group.FullStackSG.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1" # semantically equivalent to all ports
}

resource "aws_vpc_security_group_egress_rule" "allow_all_traffic_ipv6" {
  security_group_id = aws_security_group.FullStackSG.id
  cidr_ipv6         = "::/0"
  ip_protocol       = "-1" # semantically equivalent to all ports
}
